--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,4 +1,3 @@
-/*buttons contents*/
 .btn {
     min-width: 6rem;
     width: auto;
@@ -11,10 +10,9 @@
 }
 
 .btn:hover {
-    /*background-color: var(--PRIMARY_800);*/
     transform: scaleY(.6rem);
     background: none;
-    color: var(--TEXT);
+    /* color: var(--TEXT); */
 }
 
 .primary {
