--- a/src/routes/changeinfuser/Global.css
+++ b/src/routes/changeinfuser/Global.css
@@ -25,8 +25,6 @@
 }
 
 .img-container {
-    /* width: 7rem;
-    height: 7rem; */
     margin-top: 15vh;
 }
 
@@ -46,6 +44,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    gap: 1rem;
 }
 
 .form p {
@@ -61,11 +60,7 @@
     color: var(--TEXT_LIGHT);
 }
 
-.form .input-container {
-    margin-bottom: 2rem;
-}
-
-.form input {
+.change-container form .input-container input {
     color: var(--TEXT_LIGHT);
 }
 
